# MONOLITH

./: .AGENTS.md  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.agents/: AGENTS.md
assets/fonts/: README.md
docs/: README.md  architecture.md  drawing.md  filesystem.md  vision.md
docs/apps/: drawing.md  filesystem-browser.md  minesweeper.md  settings.md  snake.md  terminal.md  text-editor.md
docs/development/: scripts.md
scripts/: headless_drawing_smoke.sh  test_modr_format.cpp  verify_drawing_integration.sh  verify_games_integration.sh
src/: main.cpp
src/app/: App.hpp  DrawingApp.cpp  DrawingApp.hpp  FilesystemApp.cpp  FilesystemApp.hpp  MinesweeperApp.cpp  MinesweeperApp.hpp  SettingsApp.cpp  SettingsApp.hpp  SnakeApp.cpp  SnakeApp.hpp  TerminalApp.cpp  TerminalApp.hpp  TextEditorApp.cpp  TextEditorApp.hpp
src/fs/: Filesystem.cpp  Filesystem.hpp
src/settings/: DesktopSettings.cpp  DesktopSettings.hpp
src/window/: Window.hpp  WindowManager.cpp  WindowManager.hpp
